--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     </p>
   </div>
 
-  <script src="../js/auth/login.js"></script>
+  <script type="module" src="js/auth/login.js"></script>
 </body>
 </html>
