--- a/register.html
+++ b/register.html
@@ -14,7 +14,7 @@
     <input type="email" id="email" placeholder="Email">
     <input type="password" id="password" placeholder="Contraseña">
 
-    <button id="registerBtn">Registrarse</button>
+    <button type="button" id="registerBtn">Registrarse</button>
 
     <p>
       ¿Ya tienes cuenta?
