--- a/dashboard.html
+++ b/dashboard.html
@@ -136,7 +136,10 @@
 
   <!-- SCRIPTS -->
   <script type="module" src="js/dashboard/dashboard.js"></script>
+  <script type="module" src="js/dashboard/modal.js"></script>
+  <script type="module" src="js/dashboard/rifas.js"></script>
   <script type="module" src="js/dashboard/crearRifa.js"></script>
+  <script type="module" src="js/dashboard/configuracion.js"></script>
 
 </body>
 </html>
