--- a/dashboard.html
+++ b/dashboard.html
@@ -32,8 +32,17 @@
       </button>
 
       <button id="btnConfiguracion" class="card">
+        📩 Mensajes 
+      </button>
+
+      <button id="btnConfiguracion" class="card">
+        Horario de juegos
+      </button>
+
+      <button id="btnConfiguracion" class="card">
         ⚙️ Configuración
       </button>
+
     </section>
 
     <!-- SECCIÓN DINÁMICA -->
