--- a/dashboard.html
+++ b/dashboard.html
@@ -12,7 +12,7 @@
 
   <!-- TOP BAR -->
   <header class="topbar">
-    <h1>Panel</h1>
+    <h1>Panel de usuario</h1>
     <button id="logoutBtn">Cerrar sesión</button>
   </header>
 
