--- a/register.html
+++ b/register.html
@@ -11,8 +11,14 @@
     <h1>Crear cuenta</h1>
 
     <input type="text" id="name" placeholder="Nombre">
-    <input type="email" id="email" placeholder="Email">
-    <input type="password" id="password" placeholder="Contraseña">
+<input type="email" id="email" placeholder="Email">
+<input type="password" id="password" placeholder="Contraseña">
+
+<input
+  type="text"
+  id="referralCode"
+  placeholder="Código de referido (opcional)"
+/>
 
     <button type="button" id="registerBtn">Registrarse</button>
 
