--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Dashboard</title>
-
+  <link rel="icon" href="/favicon.ico">
   <link rel="stylesheet" href="css/mensajes.css">
   <link rel="stylesheet" href="css/dashboard.css">
   <link rel="stylesheet" href="css/numeros.css">
