--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Login</title>
   <link rel="stylesheet" href="../css/auth.css">
+  <link rel="icon" href="/favicon.ico">
 </head>
 <body>
 
