--- a/register.html
+++ b/register.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Registro</title>
-  <link rel="stylesheet" href="../css/auth.css">
+  <link rel="icon" href="/favicon.ico">
+  <link rel="stylesheet" href="css/auth.css">
 </head>
 <body>
 
@@ -28,6 +29,6 @@
     </p>
   </div>
 
-  <script type="module" src="../js/auth/register.js"></script>
+  <script type="module" src="js/auth/register.js"></script>
 </body>
 </html>
