--- a/dashboard.html
+++ b/dashboard.html
@@ -92,13 +92,13 @@
   </footer>
 
   <!-- SCRIPTS -->
-  <script type="module" src="js/dashboard/dashboard.js"></script>
-  <script type="module" src="js/dashboard/modal.js"></script>
-  <script type="module" src="js/dashboard/rifas.js"></script>
-  <script type="module" src="js/dashboard/crearRifa.js"></script>
-  <script type="module" src="js/dashboard/configuracion.js"></script>
-  <script type="module" src="js/dashboard/mensajes.js"></script>
-  <script type="module" src="js/dashboard/horarios.js"></script>
+  <script type="module" src="/js/dashboard/dashboard.js"></script>
+  <script type="module" src="/js/dashboard/modal.js"></script>
+  <script type="module" src="/js/dashboard/rifas.js"></script>
+  <script type="module" src="/js/dashboard/crearRifa.js"></script>
+  <script type="module" src="/js/dashboard/configuracion.js"></script>
+  <script type="module" src="/js/dashboard/mensajes.js"></script>
+  <script type="module" src="/js/dashboard/horarios.js"></script>
 
 </body>
 </html>
