--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Login</title>
-  <link rel="stylesheet" href="../css/auth.css">
+  <link rel="stylesheet" href="/css/auth.css">
   <link rel="icon" href="/favicon.ico">
 </head>
 <body>
@@ -18,7 +18,7 @@
 
     <p>
       ¿No tienes cuenta?
-      <a href="register.html">Crear cuenta</a>
+      <a href="/register.html">Crear cuenta</a>
     </p>
   </div>
 
