--- a/dashboard.html
+++ b/dashboard.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/mensajes.css">
   <link rel="stylesheet" href="css/dashboard.css">
   <link rel="stylesheet" href="css/numeros.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
